Button spacing fix

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -12,13 +12,14 @@ input[type="button"],
 input[type="submit"],
 input[type="reset"] {
 	position: relative;
+	display: table;
+	width: auto;
 	background-color: var(--detail-color);
 	margin-bottom: var(--content-margin);
 	padding: var(--button-padding);
 	font-size: var(--button-font-size);
 	color: var(--lightest-color);
 	text-align: center;
-	letter-spacing: 1px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
